# interactive-understanding

./: README.md
example/: manifest.json  source.json  text.md
example/docling/: source-timings-2026-07-08_14-54-58.json  source.json  source.md
example/visual-crops/: manifest.json
interactive-understanding/: SKILL.md
interactive-understanding/scripts/: pyproject.toml
interactive-understanding/scripts/src/interactive_understanding/: __init__.py  crop_docling_bboxes.py  docling_context_pack.py  docling_helpers.py  image_sheets.py  models.py
interactive-understanding/scripts/tests/: docling_fixtures.py  test_cli_contract.py  test_context_pack.py  test_crop_contract.py  test_docling_converter.py  test_docling_helpers.py  test_image_sheets.py
