[project]
name = "interactive-understanding-scripts"
version = "0.1.0"
description = "Docling context-pack tools for the interactive-understanding skill"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.108.0",
  "docling-core>=2.86.0",
  "onnxruntime>=1.22.0",
  "pillow>=10",
  "pydantic>=2",
  "rectpack>=0.2.2",
]

[project.scripts]
iu-context-pack = "interactive_understanding.docling_context_pack:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
]

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interactive_understanding"]
